syntax = "proto3";

package sp.rpc.hello;

service HelloService {
    rpc Hello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string hello_message = 1;
}

